k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dataops-api
spec:
  selector:
    app: dataops-api
  ports:
  - port: 5000
    targetPort: 5000
  type: NodePort
