k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dataops-api-ingress
spec:
  rules:
    - host: api.dataops.olliehugh.es
      http:
        paths:
        - backend:
            serviceName: dataops-api
            servicePort: 5000
